5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4177/executions/1679_1105.log
== TEST (2019-05-01 21:28:43) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
casa=input("Qual a descricao do brasao?: ").lower()
print("Entrada: ", casa)
if(casa=='lobo'):
	print("Casa: Stark")
elif(casa=='leao'):
	print("Casa: Lannister")
elif(casa=='veado'):
   print("Casa: Baratheon")
elif(casa=='dragao')
   print("Casa: Targaryen")
elif(casa=='rosa')
   print("Casa: Tyrell")
elif(casa=='sol')
   print("Casa: Martell")
elif(casa=='lula')
   print("Casa: Greyjoy")
elif(casa=='esfolado')
   print("Casa: Bolton")
elif(casa=='turta')
   print("Casa: Tully")
else:
	print("Brasao invalido")
	
-- ERROR:
File "XXXX", line 11
    elif(casa=='dragao')
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:29:51) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
casa=input("Qual a descricao do brasao?: ").lower()
print("Entrada: ", casa)
if(casa=='lobo'):
	print("Casa: Stark")
elif(casa=='leao'):
	print("Casa: Lannister")
elif(casa=='veado'):
   print("Casa: Baratheon")
elif(casa=='dragao'):
   print("Casa: Targaryen")
elif(casa=='rosa'):
   print("Casa: Tyrell")
elif(casa=='sol'):
   print("Casa: Martell")
elif(casa=='lula'):
   print("Casa: Greyjoy")
elif(casa=='esfolado'):
   print("Casa: Bolton")
elif(casa=='turta'):
   print("Casa: Tully")
else:
	print("Brasao invalido")
	
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 21:30:00) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
casa=input("Qual a descricao do brasao?: ").lower()
print("Entrada: ", casa)
if(casa=='lobo'):
	print("Casa: Stark")
elif(casa=='leao'):
	print("Casa: Lannister")
elif(casa=='veado'):
   print("Casa: Baratheon")
elif(casa=='dragao'):
   print("Casa: Targaryen")
elif(casa=='rosa'):
   print("Casa: Tyrell")
elif(casa=='sol'):
   print("Casa: Martell")
elif(casa=='lula'):
   print("Casa: Greyjoy")
elif(casa=='esfolado'):
   print("Casa: Bolton")
elif(casa=='turta'):
   print("Casa: Tully")
else:
	print("Brasao invalido")
	
-- EXECUTION TIME:
0.18513
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
